--- a/Myapp/config/locales/en.yml
+++ b/Myapp/config/locales/en.yml
@@ -1,21 +1,108 @@
 en:
-  en: English
-  ru: Russian
   activerecord:
+    attributes:
+      answer:
+        body: Body
+        question: Question
+      question:
+        body: Body
+        title: Title
+      user:
+        created_at: Created at
+        email: Email
+        name: Name
+        old_password: Old password
+        password: Password
+        password_confirmation: Password confirmation
+        updated_at: Updated at
     models:
       question: Question
-    attributes: 
-      question:
-        title: "Title"
-        body: "Body"
+  admin:
+    users:
+      create:
+        success: Users imported!
+      index:
+        download_zipped: Download zipped XLSX
+        title: Admin Users
+        upload_form:
+          archive: Select archive
+          submit: Upload!
+        upload_zipped: Upload users from XLSX
+  answers:
+    create:
+      success: Answer created!
+    destroy:
+      success: Answer deleted!
+    edit:
+      title: Edit answer
+    update:
+      success: Answer updated!
+  en: English
+  global:
+    button:
+      delete: Destroy
+      edit: Edit
+      show: Show
+      submit: Submit
+    dialog:
+      you_sure: Are you sure?
+    flash:
+      already_signed_in: You are already signed in!
+      not_signed_in: You are not signed in!
+    text:
+      omission: "... (continued)"
+  menu:
+    edit_profile: Profile
+    home: Home
+    log_in: Log In
+    log_out: Log out
+    questions: Questions
+    sign_up: Sign Up
+    users: Users
   pages:
     index:
-      title: "Second try"
-      services_html: "Welcom"    
-  menu: 
-    home: "Home"
-    questions: Questions
-  questions: 
+      title: Welcome to AskIt!
+  questions:
+    create:
+      success: Question created!
     destroy:
       success: Question deleted!
-      
+    edit:
+      title: Edit question
+    index:
+      new: New question
+      title: Questions
+    new:
+      title: New question
+    show:
+      answers: Answers
+      write_answer: Write your answer
+    update:
+      success: Question updated!
+  ru: Russian
+  sessions:
+    create:
+      invalid_creds: Incorrect email and/or password!
+      success: Welcome back, %{name}!
+    destroy:
+      success: See you later!
+    new:
+      form:
+        email: Email
+        password: Password
+        remember_me: Remember me
+        submit: Sign in!
+      title: Log In
+  users:
+    create:
+      success: Welcome to the app, %{name}!
+    edit:
+      title: Edit profile
+    global:
+      forms:
+        register: Register
+        save: Save
+    new:
+      title: Registration
+    update:
+      success: Your profile was successfully updated!
