--- a/Myapp/config/locales/ru.yml
+++ b/Myapp/config/locales/ru.yml
@@ -1,6 +1,8 @@
 ru:
   activerecord:
     attributes:
+      comment:
+      body: Текст
       answer:
         body: Текст
         question: Вопрос
@@ -28,6 +30,11 @@ ru:
           archive: Выберите архив
           submit: Загрузить!
         upload_zipped: Загрузить пользователей в XLSX
+  comments:
+    create:
+      success: Коментарий создан!
+    destroy:
+      success: Коментарий удален!
   answers:
     create:
       success: Ответ создан!
@@ -77,6 +84,7 @@ ru:
     show:
       answers: Ответы
       write_answer: Напишите свой ответ
+      comments: Коментарии
     update:
       success: Вопрос обновлён!
   ru: Русский
